syntax = "proto3";

// proto package
package user;

// go package

option go_package = "./userService/proto;userServicepb";

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  string role = 4;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;
  User user = 2;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool deleted = 1;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message ChangeRoleRequest {
  string id = 1;
  string role = 2;
}

message ChangeRoleResponse {
  bool changed = 1;
}

message GetUserToLoginRequest {
  string username = 1;
  string password = 2;
}

message GetUserToLoginResponse {
  User user = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
  rpc ChangeRole(ChangeRoleRequest) returns (ChangeRoleResponse);
  rpc GetUserToLogin(GetUserToLoginRequest) returns (GetUserToLoginResponse);
}